[package]
name = "pros-pack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile. release]
opt-level = "z" # Optimize for size.

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
walkdir = "2.4.0"
